[gd_scene load_steps=11 format=2]

[ext_resource path="res://art/Map/Floor/Black.tres" type="TileSet" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/Map/Floor/grass.tres" type="TileSet" id=3]
[ext_resource path="res://art/Map/1_lv/fire.tscn" type="PackedScene" id=4]
[ext_resource path="res://NPC's/Tata/tata.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemy/pluskw.tscn" type="PackedScene" id=6]
[ext_resource path="res://Maps/lv12.gd" type="Script" id=7]
[ext_resource path="res://art/fonts/VT323-think.tres" type="DynamicFont" id=8]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( -2870.96, -2047.58, -2694.18, -2419.52, -2264.26, -2432.24, -1982.83, -2285.17, -1626.45, -1986.77, -1900.81, -1702.51, -2134.15, -1643.11, -2453.76, -1648.77, -2745.09, -1736.45 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7, 8 ) ]
outlines = [ PoolVector2Array( -2870.96, -2047.58, -2694.18, -2419.52, -2264.26, -2432.24, -1982.83, -2285.17, -1626.45, -1986.77, -1900.81, -1702.51, -2134.15, -1643.11, -2453.76, -1648.77, -2745.09, -1736.45 ) ]

[sub_resource type="Animation" id=2]
resource_name = "Nowa animacja"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.7, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.101961, 0.101961, 0.101961, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/StaticBody2D6:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/StaticBody2D5:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("YSort/StaticBody2D4:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("YSort/StaticBody2D3:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("YSort/StaticBody2D2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("YSort/StaticBody2D:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 2.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Map" type="Node2D"]
script = ExtResource( 7 )

[node name="TileMap2" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 240, 120 )
centered_textures = true
format = 1
tile_data = PoolIntArray( -1769502, 1073741824, 0, -1769501, 1073741824, 0, -1769500, 1073741824, 0, -1769499, 1073741824, 0, -1703967, 1073741824, 0, -1703966, 1073741824, 0, -1703965, 1073741824, 0, -1703964, 1073741824, 0, -1703963, 1073741824, 0, -1638433, 1073741824, 0, -1638432, 1073741824, 0, -1638431, 1073741824, 0, -1638430, 1073741824, 0, -1638429, 1073741824, 0, -1638428, 1073741824, 0, -1638427, 1073741824, 0, -1638426, 1073741824, 0, -1638425, 1073741824, 0, -1572898, 1073741824, 0, -1572895, 1073741824, 0, -1572894, 1073741824, 0, -1572893, 1073741824, 0, -1572892, 1073741824, 0, -1572891, 1073741824, 0, -1572890, 1073741824, 0, -1572889, 1073741824, 0, -1572888, 1073741824, 0, -1507363, 1073741824, 0, -1507361, 1073741824, 0, -1507360, 1073741824, 0, -1507359, 1073741824, 0, -1507358, 1073741824, 0, -1507357, 1073741824, 0, -1507356, 1073741824, 0, -1507355, 1073741824, 0, -1507354, 1073741824, 0, -1507353, 1073741824, 0, -1507352, 1073741824, 0, -1507351, 1073741824, 0, -1507350, 1073741824, 0, -1507349, 1073741824, 0, -1441827, 1073741824, 0, -1441826, 1073741824, 0, -1441825, 1073741824, 0, -1441824, 1073741824, 0, -1441823, 1073741824, 0, -1441822, 1073741824, 0, -1441821, 1073741824, 0, -1441820, 1073741824, 0, -1441819, 1073741824, 0, -1441818, 1073741824, 0, -1441817, 1073741824, 0, -1441816, 1073741824, 0, -1441815, 1073741824, 0, -1441814, 1073741824, 0, -1441813, 1073741824, 0, -1441812, 1073741824, 0, -1441811, 1073741824, 0, -1441810, 1073741824, 0, -1376292, 1073741824, 0, -1376290, 1073741824, 0, -1376289, 1073741824, 0, -1376288, 1073741824, 0, -1376287, 1073741824, 0, -1376286, 1073741824, 0, -1376285, 1073741824, 0, -1376284, 1073741824, 0, -1376283, 1073741824, 0, -1376282, 1073741824, 0, -1376281, 1073741824, 0, -1376280, 1073741824, 0, -1376279, 1073741824, 0, -1376278, 1073741824, 0, -1376277, 1073741824, 0, -1376276, 1073741824, 0, -1376275, 1073741824, 0, -1376274, 1073741824, 0, -1376273, 1073741824, 0, -1310757, 1073741824, 0, -1310756, 1073741824, 0, -1310755, 1073741824, 0, -1310754, 1073741824, 0, -1310753, 1073741824, 0, -1310752, 1073741824, 0, -1310751, 1073741824, 0, -1310750, 1073741824, 0, -1310749, 1073741824, 0, -1310748, 1073741824, 0, -1310747, 1073741824, 0, -1310746, 1073741824, 0, -1310745, 1073741824, 0, -1310744, 1073741824, 0, -1310743, 1073741824, 0, -1310742, 1073741824, 0, -1310741, 1073741824, 0, -1310740, 1073741824, 0, -1310739, 1073741824, 0, -1310738, 1073741824, 0, -1310737, 1073741824, 0, -1245223, 1073741824, 0, -1245222, 1073741824, 0, -1245221, 1073741824, 0, -1245220, 1073741824, 0, -1245219, 1073741824, 0, -1245218, 1073741824, 0, -1245217, 1073741824, 0, -1245216, 1073741824, 0, -1245215, 1073741824, 0, -1245214, 1073741824, 0, -1245213, 1073741824, 0, -1245212, 1073741824, 0, -1245211, 1073741824, 0, -1245210, 1073741824, 0, -1245209, 1073741824, 0, -1245208, 1073741824, 0, -1245207, 1073741824, 0, -1245206, 1073741824, 0, -1245205, 1073741824, 0, -1245204, 1073741824, 0, -1245203, 1073741824, 0, -1245202, 1073741824, 0, -1245201, 1073741824, 0, -1245200, 1073741824, 0, -1179687, 1073741824, 0, -1179686, 1073741824, 0, -1179685, 1073741824, 0, -1179684, 1073741824, 0, -1179683, 1073741824, 0, -1179682, 1073741824, 0, -1179681, 1073741824, 0, -1179680, 1073741824, 0, -1179679, 1073741824, 0, -1179678, 1073741824, 0, -1179677, 1073741824, 0, -1179676, 1073741824, 0, -1179675, 1073741824, 0, -1179674, 1073741824, 0, -1179673, 1073741824, 0, -1179672, 1073741824, 0, -1179671, 1073741824, 0, -1179670, 1073741824, 0, -1179669, 1073741824, 0, -1179668, 1073741824, 0, -1179667, 1073741824, 0, -1179666, 1073741824, 0, -1179665, 1073741824, 0, -1179664, 1073741824, 0, -1114156, 1073741824, 0, -1114152, 1073741824, 0, -1114151, 1073741824, 0, -1114150, 1073741824, 0, -1114149, 1073741824, 0, -1114148, 1073741824, 0, -1114147, 1073741824, 0, -1114146, 1073741824, 0, -1114145, 1073741824, 0, -1114144, 1073741824, 0, -1114143, 1073741824, 0, -1114142, 1073741824, 0, -1114141, 1073741824, 0, -1114140, 1073741824, 0, -1114139, 1073741824, 0, -1114138, 1073741824, 0, -1114137, 1073741824, 0, -1114136, 1073741824, 0, -1114135, 1073741824, 0, -1114134, 1073741824, 0, -1114133, 1073741824, 0, -1114132, 1073741824, 0, -1114131, 1073741824, 0, -1114130, 1073741824, 0, -1114129, 1073741824, 0, -1114128, 1073741824, 0, -1114127, 1073741824, 0, -1048620, 1073741824, 0, -1048617, 1073741824, 0, -1048616, 1073741824, 0, -1048615, 1073741824, 0, -1048614, 1073741824, 0, -1048613, 1073741824, 0, -1048612, 1073741824, 0, -1048611, 1073741824, 0, -1048610, 1073741824, 0, -1048609, 1073741824, 0, -1048608, 1073741824, 0, -1048607, 1073741824, 0, -1048606, 1073741824, 0, -1048605, 1073741824, 0, -1048604, 1073741824, 0, -1048603, 1073741824, 0, -1048602, 1073741824, 0, -1048601, 1073741824, 0, -1048600, 1073741824, 0, -1048599, 1073741824, 0, -1048598, 1073741824, 0, -1048597, 1073741824, 0, -1048596, 1073741824, 0, -1048595, 1073741824, 0, -1048594, 1073741824, 0, -1048593, 1073741824, 0, -1048592, 1073741824, 0, -1048591, 1073741824, 0, -1048590, 1073741824, 0, -983083, 1073741824, 0, -983082, 1073741824, 0, -983081, 1073741824, 0, -983080, 1073741824, 0, -983079, 1073741824, 0, -983078, 1073741824, 0, -983077, 1073741824, 0, -983076, 1073741824, 0, -983075, 1073741824, 0, -983074, 1073741824, 0, -983073, 1073741824, 0, -983072, 1073741824, 0, -983071, 1073741824, 0, -983070, 1073741824, 0, -983069, 1073741824, 0, -983068, 1073741824, 0, -983067, 1073741824, 0, -983066, 1073741824, 0, -983065, 1073741824, 0, -983064, 1073741824, 0, -983063, 1073741824, 0, -983062, 1073741824, 0, -983061, 1073741824, 0, -983060, 1073741824, 0, -983059, 1073741824, 0, -983058, 1073741824, 0, -983057, 1073741824, 0, -983056, 1073741824, 0, -983055, 1073741824, 0, -983054, 1073741824, 0, -983053, 1073741824, 0, -917547, 1073741824, 0, -917546, 1073741824, 0, -917545, 1073741824, 0, -917544, 1073741824, 0, -917543, 1073741824, 0, -917542, 1073741824, 0, -917541, 1073741824, 0, -917540, 1073741824, 0, -917539, 1073741824, 0, -917538, 1073741824, 0, -917537, 1073741824, 0, -917536, 1073741824, 0, -917535, 1073741824, 0, -917534, 1073741824, 0, -917533, 1073741824, 0, -917532, 1073741824, 0, -917531, 1073741824, 0, -917530, 1073741824, 0, -917528, 1073741824, 0, -917525, 1073741824, 0, -917524, 1073741824, 0, -917523, 1073741824, 0, -917522, 1073741824, 0, -917521, 1073741824, 0, -917520, 1073741824, 0, -917519, 1073741824, 0, -917518, 1073741824, 0, -917517, 1073741824, 0, -917516, 1073741824, 0, -852011, 1073741824, 0, -852010, 1073741824, 0, -852009, 1073741824, 0, -852008, 1073741824, 0, -852007, 1073741824, 0, -852006, 1073741824, 0, -852005, 1073741824, 0, -852004, 1073741824, 0, -852003, 1073741824, 0, -852002, 1073741824, 0, -852001, 1073741824, 0, -852000, 1073741824, 0, -851999, 1073741824, 0, -851998, 1073741824, 0, -851997, 1073741824, 0, -851996, 1073741824, 0, -851995, 1073741824, 0, -851994, 1073741824, 0, -851993, 1073741824, 0, -851988, 1073741824, 0, -851987, 1073741824, 0, -851986, 1073741824, 0, -851985, 1073741824, 0, -851984, 1073741824, 0, -851983, 1073741824, 0, -851982, 1073741824, 0, -851981, 1073741824, 0, -851980, 1073741824, 0, -851979, 1073741824, 0, -786476, 1073741824, 0, -786475, 1073741824, 0, -786474, 1073741824, 0, -786473, 1073741824, 0, -786472, 1073741824, 0, -786471, 1073741824, 0, -786470, 1073741824, 0, -786469, 1073741824, 0, -786468, 1073741824, 0, -786467, 1073741824, 0, -786466, 1073741824, 0, -786465, 1073741824, 0, -786464, 1073741824, 0, -786463, 1073741824, 0, -786462, 1073741824, 0, -786461, 1073741824, 0, -786460, 1073741824, 0, -786459, 1073741824, 0, -786451, 1073741824, 0, -786450, 1073741824, 0, -786449, 1073741824, 0, -786448, 1073741824, 0, -786447, 1073741824, 0, -786446, 1073741824, 0, -786445, 1073741824, 0, -786444, 1073741824, 0, -786443, 1073741824, 0, -786442, 1073741824, 0, -720939, 1073741824, 0, -720938, 1073741824, 0, -720937, 1073741824, 0, -720936, 1073741824, 0, -720935, 1073741824, 0, -720934, 1073741824, 0, -720933, 1073741824, 0, -720932, 1073741824, 0, -720931, 1073741824, 0, -720930, 1073741824, 0, -720929, 1073741824, 0, -720928, 1073741824, 0, -720927, 1073741824, 0, -720926, 1073741824, 0, -720925, 1073741824, 0, -720924, 1073741824, 0, -720914, 1073741824, 0, -720913, 1073741824, 0, -720912, 1073741824, 0, -720911, 1073741824, 0, -720910, 1073741824, 0, -720909, 1073741824, 0, -720908, 1073741824, 0, -720907, 1073741824, 0, -655403, 1073741824, 0, -655402, 1073741824, 0, -655401, 1073741824, 0, -655400, 1073741824, 0, -655399, 1073741824, 0, -655398, 1073741824, 0, -655397, 1073741824, 0, -655396, 1073741824, 0, -655395, 1073741824, 0, -655394, 1073741824, 0, -655393, 1073741824, 0, -655392, 1073741824, 0, -655391, 1073741824, 0, -655390, 1073741824, 0, -655377, 1073741824, 0, -655376, 1073741824, 0, -655375, 1073741824, 0, -655374, 1073741824, 0, -655373, 1073741824, 0, -655372, 1073741824, 0, -655371, 1073741824, 0, -655370, 1073741824, 0, -589866, 1073741824, 0, -589865, 1073741824, 0, -589864, 1073741824, 0, -589863, 1073741824, 0, -589862, 1073741824, 0, -589861, 1073741824, 0, -589860, 1073741824, 0, -589859, 1073741824, 0, -589858, 1073741824, 0, -589857, 1073741824, 0, -589856, 1073741824, 0, -589855, 1073741824, 0, -589840, 1073741824, 0, -589839, 1073741824, 0, -589838, 1073741824, 0, -589837, 1073741824, 0, -589836, 1073741824, 0, -589835, 1073741824, 0, -589834, 1073741824, 0, -589833, 1073741824, 0, -524330, 1073741824, 0, -524329, 1073741824, 0, -524328, 1073741824, 0, -524327, 1073741824, 0, -524326, 1073741824, 0, -524325, 1073741824, 0, -524324, 1073741824, 0, -524323, 1073741824, 0, -524322, 1073741824, 0, -524321, 1073741824, 0, -524303, 1073741824, 0, -524302, 1073741824, 0, -524301, 1073741824, 0, -524300, 1073741824, 0, -524299, 1073741824, 0, -524298, 1073741824, 0, -524297, 1073741824, 0, -524296, 1073741824, 0, -458795, 1073741824, 0, -458794, 1073741824, 0, -458793, 1073741824, 0, -458792, 1073741824, 0, -458791, 1073741824, 0, -458790, 1073741824, 0, -458789, 1073741824, 0, -458788, 1073741824, 0, -458787, 1073741824, 0, -458786, 1073741824, 0, -458785, 1073741824, 0, -458766, 1073741824, 0, -458765, 1073741824, 0, -458764, 1073741824, 0, -458763, 1073741824, 0, -458762, 1073741824, 0, -458761, 1073741824, 0, -458760, 1073741824, 0, -393258, 1073741824, 0, -393257, 1073741824, 0, -393256, 1073741824, 0, -393255, 1073741824, 0, -393254, 1073741824, 0, -393253, 1073741824, 0, -393252, 1073741824, 0, -393251, 1073741824, 0, -393250, 1073741824, 0, -393249, 1073741824, 0, -393248, 1073741824, 0, -393231, 1073741824, 0, -393230, 1073741824, 0, -393229, 1073741824, 0, -393228, 1073741824, 0, -393227, 1073741824, 0, -393226, 1073741824, 0, -393225, 1073741824, 0, -393224, 1073741824, 0, -327721, 1073741824, 0, -327720, 1073741824, 0, -327719, 1073741824, 0, -327718, 1073741824, 0, -327717, 1073741824, 0, -327716, 1073741824, 0, -327715, 1073741824, 0, -327714, 1073741824, 0, -327713, 1073741824, 0, -327712, 1073741824, 0, -327711, 1073741824, 0, -327697, 1073741824, 0, -327696, 1073741824, 0, -327695, 1073741824, 0, -327694, 1073741824, 0, -327693, 1073741824, 0, -327692, 1073741824, 0, -327691, 1073741824, 0, -327690, 1073741824, 0, -327689, 1073741824, 0, -327688, 1073741824, 0, -262185, 1073741824, 0, -262184, 1073741824, 0, -262183, 1073741824, 0, -262182, 1073741824, 0, -262181, 1073741824, 0, -262180, 1073741824, 0, -262179, 1073741824, 0, -262178, 1073741824, 0, -262177, 1073741824, 0, -262176, 1073741824, 0, -262175, 1073741824, 0, -262174, 1073741824, 0, -262162, 1073741824, 0, -262161, 1073741824, 0, -262160, 1073741824, 0, -262159, 1073741824, 0, -262158, 1073741824, 0, -262157, 1073741824, 0, -262156, 1073741824, 0, -262155, 1073741824, 0, -262154, 1073741824, 0, -262153, 1073741824, 0, -262152, 1073741824, 0, -196647, 1073741824, 0, -196646, 1073741824, 0, -196645, 1073741824, 0, -196644, 1073741824, 0, -196643, 1073741824, 0, -196642, 1073741824, 0, -196641, 1073741824, 0, -196640, 1073741824, 0, -196639, 1073741824, 0, -196638, 1073741824, 0, -196637, 1073741824, 0, -196627, 1073741824, 0, -196626, 1073741824, 0, -196625, 1073741824, 0, -196624, 1073741824, 0, -196623, 1073741824, 0, -196622, 1073741824, 0, -196621, 1073741824, 0, -196620, 1073741824, 0, -196619, 1073741824, 0, -196618, 1073741824, 0, -196617, 1073741824, 0, -196616, 1073741824, 0, -131110, 1073741824, 0, -131109, 1073741824, 0, -131108, 1073741824, 0, -131107, 1073741824, 0, -131106, 1073741824, 0, -131105, 1073741824, 0, -131104, 1073741824, 0, -131103, 1073741824, 0, -131102, 1073741824, 0, -131101, 1073741824, 0, -131100, 1073741824, 0, -131092, 1073741824, 0, -131091, 1073741824, 0, -131090, 1073741824, 0, -131089, 1073741824, 0, -131088, 1073741824, 0, -131087, 1073741824, 0, -131086, 1073741824, 0, -131085, 1073741824, 0, -131084, 1073741824, 0, -131083, 1073741824, 0, -131082, 1073741824, 0, -131081, 1073741824, 0, -131080, 1073741824, 0, -131079, 1073741824, 0, -131078, 1073741824, 0, -65573, 1073741824, 0, -65572, 1073741824, 0, -65571, 1073741824, 0, -65570, 1073741824, 0, -65569, 1073741824, 0, -65568, 1073741824, 0, -65567, 1073741824, 0, -65566, 1073741824, 0, -65565, 1073741824, 0, -65564, 1073741824, 0, -65563, 1073741824, 0, -65558, 1073741824, 0, -65557, 1073741824, 0, -65556, 1073741824, 0, -65555, 1073741824, 0, -65554, 1073741824, 0, -65553, 1073741824, 0, -65552, 1073741824, 0, -65551, 1073741824, 0, -65550, 1073741824, 0, -65549, 1073741824, 0, -65548, 1073741824, 0, -65547, 1073741824, 0, -65546, 1073741824, 0, -65545, 1073741824, 0, -65544, 1073741824, 0, -65543, 1073741824, 0, -65542, 1073741824, 0, -36, 1073741824, 0, -35, 1073741824, 0, -34, 1073741824, 0, -33, 1073741824, 0, -32, 1073741824, 0, -31, 1073741824, 0, -30, 1073741824, 0, -29, 1073741824, 0, -28, 1073741824, 0, -27, 1073741824, 0, -26, 1073741824, 0, -25, 1073741824, 0, -22, 1073741824, 0, -21, 1073741824, 0, -20, 1073741824, 0, -19, 1073741824, 0, -18, 1073741824, 0, -17, 1073741824, 0, -16, 1073741824, 0, -15, 1073741824, 0, -14, 1073741824, 0, -13, 1073741824, 0, -12, 1073741824, 0, -11, 1073741824, 0, -10, 1073741824, 0, -9, 1073741824, 0, -8, 1073741824, 0, -7, 1073741824, 0, 65501, 1073741824, 0, 65502, 1073741824, 0, 65503, 1073741824, 0, 65504, 1073741824, 0, 65505, 1073741824, 0, 65506, 1073741824, 0, 65507, 1073741824, 0, 65508, 1073741824, 0, 65509, 1073741824, 0, 65510, 1073741824, 0, 65511, 1073741824, 0, 65512, 1073741824, 0, 65513, 1073741824, 0, 65514, 1073741824, 0, 65515, 1073741824, 0, 65516, 1073741824, 0, 65517, 1073741824, 0, 65518, 1073741824, 0, 65519, 1073741824, 0, 65520, 1073741824, 0, 65521, 1073741824, 0, 65522, 1073741824, 0, 65523, 1073741824, 0, 65524, 1073741824, 0, 65525, 1073741824, 0, 65526, 1073741824, 0, 65527, 1073741824, 0, 65528, 1073741824, 0, 65529, 1073741824, 0, 131038, 1073741824, 0, 131039, 1073741824, 0, 131040, 1073741824, 0, 131041, 1073741824, 0, 131042, 1073741824, 0, 131043, 1073741824, 0, 131044, 1073741824, 0, 131045, 1073741824, 0, 131046, 1073741824, 0, 131047, 1073741824, 0, 131048, 1073741824, 0, 131049, 1073741824, 0, 131050, 1073741824, 0, 131051, 1073741824, 0, 131052, 1073741824, 0, 131053, 1073741824, 0, 131054, 1073741824, 0, 131055, 1073741824, 0, 131056, 1073741824, 0, 131057, 1073741824, 0, 131058, 1073741824, 0, 131059, 1073741824, 0, 131060, 1073741824, 0, 131061, 1073741824, 0, 131062, 1073741824, 0, 131063, 1073741824, 0, 131064, 1073741824, 0, 131065, 1073741824, 0, 131066, 1073741824, 0, 196575, 1073741824, 0, 196576, 1073741824, 0, 196577, 1073741824, 0, 196578, 1073741824, 0, 196579, 1073741824, 0, 196580, 1073741824, 0, 196581, 1073741824, 0, 196582, 1073741824, 0, 196583, 1073741824, 0, 196584, 1073741824, 0, 196585, 1073741824, 0, 196586, 1073741824, 0, 196587, 1073741824, 0, 196588, 1073741824, 0, 196589, 1073741824, 0, 196590, 1073741824, 0, 196591, 1073741824, 0, 196592, 1073741824, 0, 196593, 1073741824, 0, 196594, 1073741824, 0, 196595, 1073741824, 0, 196596, 1073741824, 0, 196597, 1073741824, 0, 196598, 1073741824, 0, 196599, 1073741824, 0, 196600, 1073741824, 0, 196601, 1073741824, 0, 262113, 1073741824, 0, 262114, 1073741824, 0, 262115, 1073741824, 0, 262116, 1073741824, 0, 262117, 1073741824, 0, 262118, 1073741824, 0, 262119, 1073741824, 0, 262120, 1073741824, 0, 262121, 1073741824, 0, 262122, 1073741824, 0, 262123, 1073741824, 0, 262124, 1073741824, 0, 262125, 1073741824, 0, 262126, 1073741824, 0, 262127, 1073741824, 0, 262128, 1073741824, 0, 262129, 1073741824, 0, 262130, 1073741824, 0, 262131, 1073741824, 0, 262132, 1073741824, 0, 262133, 1073741824, 0, 262134, 1073741824, 0, 262135, 1073741824, 0, 262136, 1073741824, 0, 262137, 1073741824, 0, 327650, 1073741824, 0, 327651, 1073741824, 0, 327652, 1073741824, 0, 327653, 1073741824, 0, 327654, 1073741824, 0, 327655, 1073741824, 0, 327656, 1073741824, 0, 327657, 1073741824, 0, 327658, 1073741824, 0, 327659, 1073741824, 0, 327660, 1073741824, 0, 327661, 1073741824, 0, 327662, 1073741824, 0, 327663, 1073741824, 0, 327664, 1073741824, 0, 327665, 1073741824, 0, 327666, 1073741824, 0, 327667, 1073741824, 0, 327668, 1073741824, 0, 327669, 1073741824, 0, 327670, 1073741824, 0, 327671, 1073741824, 0, 327672, 1073741824, 0, 327673, 1073741824, 0, 393187, 1073741824, 0, 393188, 1073741824, 0, 393189, 1073741824, 0, 393190, 1073741824, 0, 393191, 1073741824, 0, 393192, 1073741824, 0, 393193, 1073741824, 0, 393194, 1073741824, 0, 393195, 1073741824, 0, 393196, 1073741824, 0, 393197, 1073741824, 0, 393198, 1073741824, 0, 393199, 1073741824, 0, 393200, 1073741824, 0, 393201, 1073741824, 0, 393202, 1073741824, 0, 393203, 1073741824, 0, 393204, 1073741824, 0, 393205, 1073741824, 0, 393206, 1073741824, 0, 393207, 1073741824, 0, 393208, 1073741824, 0, 458724, 1073741824, 0, 458725, 1073741824, 0, 458726, 1073741824, 0, 458727, 1073741824, 0, 458728, 1073741824, 0, 458729, 1073741824, 0, 458730, 1073741824, 0, 458731, 1073741824, 0, 458732, 1073741824, 0, 458733, 1073741824, 0, 458734, 1073741824, 0, 458735, 1073741824, 0, 458736, 1073741824, 0, 458737, 1073741824, 0, 458738, 1073741824, 0, 458739, 1073741824, 0, 458740, 1073741824, 0, 458741, 1073741824, 0, 458742, 1073741824, 0, 458743, 1073741824, 0, 524260, 1073741824, 0, 524261, 1073741824, 0, 524262, 1073741824, 0, 524263, 1073741824, 0, 524264, 1073741824, 0, 524265, 1073741824, 0, 524266, 1073741824, 0, 524267, 1073741824, 0, 524268, 1073741824, 0, 524269, 1073741824, 0, 524270, 1073741824, 0, 524271, 1073741824, 0, 524272, 1073741824, 0, 524273, 1073741824, 0, 524274, 1073741824, 0, 524275, 1073741824, 0, 524276, 1073741824, 0, 524277, 1073741824, 0, 524278, 1073741824, 0, 524279, 1073741824, 0, 589797, 1073741824, 0, 589798, 1073741824, 0, 589799, 1073741824, 0, 589801, 1073741824, 0, 589802, 1073741824, 0, 589803, 1073741824, 0, 589804, 1073741824, 0, 589805, 1073741824, 0, 589806, 1073741824, 0, 589807, 1073741824, 0, 589808, 1073741824, 0, 589809, 1073741824, 0, 589810, 1073741824, 0, 589811, 1073741824, 0, 589812, 1073741824, 0, 589813, 1073741824, 0, 589814, 1073741824, 0, 655339, 1073741824, 0, 655340, 1073741824, 0, 655341, 1073741824, 0, 655342, 1073741824, 0, 655343, 1073741824, 0, 655344, 1073741824, 0, 655345, 1073741824, 0, 655346, 1073741824, 0, 720876, 1073741824, 0, 720877, 1073741824, 0 )

[node name="TileMap" type="TileMap" parent="."]
modulate = Color( 0.482353, 0.482353, 0.482353, 1 )
rotation = 0.0174533
mode = 1
tile_set = ExtResource( 3 )
cell_size = Vector2( 240, 120 )
cell_tile_origin = 1
cell_y_sort = true
centered_textures = true
format = 1
tile_data = PoolIntArray( -983065, 3, 0, -983064, 0, 0, -983063, 0, 0, -917530, 3, 0, -917529, 3, 0, -917528, 0, 0, -917527, 0, 0, -917526, 0, 0, -851995, 3, 0, -851994, 3, 0, -851993, 3, 0, -851992, 3, 0, -851991, 3, 0, -851990, 0, 0, -851989, 3, 0, -786460, 3, 0, -786459, 3, 0, -786458, 1, 0, -786457, 3, 0, -786456, 1, 0, -786455, 1, 0, -786454, 0, 0, -786453, 0, 0, -786452, 3, 0, -720925, 3, 0, -720924, 3, 0, -720923, 3, 0, -720922, 3, 0, -720921, 1, 0, -720920, 0, 0, -720919, 1, 0, -720918, 1, 0, -720917, 0, 0, -720916, 3, 0, -720915, 3, 0, -655390, 3, 0, -655389, 3, 0, -655388, 3, 0, -655387, 3, 0, -655386, 3, 0, -655385, 1, 0, -655384, 0, 0, -655383, 3, 0, -655382, 1, 0, -655381, 0, 0, -655380, 3, 0, -655379, 3, 0, -655378, 3, 0, -589855, 0, 0, -589854, 3, 0, -589853, 3, 0, -589852, 3, 0, -589851, 3, 0, -589850, 0, 0, -589849, 2, 0, -589848, 1, 0, -589847, 3, 0, -589846, 1, 0, -589845, 1, 0, -589844, 0, 0, -589843, 3, 0, -589842, 3, 0, -589841, 3, 0, -524320, 3, 0, -524319, 0, 0, -524318, 3, 0, -524317, 3, 0, -524316, 3, 0, -524315, 3, 0, -524314, 1, 0, -524313, 2, 0, -524312, 1, 0, -524311, 3, 0, -524310, 3, 0, -524309, 3, 0, -524308, 3, 0, -524307, 0, 0, -524306, 3, 0, -524305, 3, 0, -524304, 3, 0, -458785, 3, 0, -458784, 3, 0, -458783, 3, 0, -458782, 0, 0, -458781, 3, 0, -458780, 0, 0, -458779, 2, 0, -458778, 0, 0, -458777, 1, 0, -458776, 2, 0, -458775, 1, 0, -458774, 1, 0, -458773, 3, 0, -458772, 2, 0, -458771, 1, 0, -458770, 3, 0, -458769, 3, 0, -458768, 3, 0, -458767, 3, 0, -393248, 3, 0, -393247, 3, 0, -393246, 0, 0, -393245, 0, 0, -393244, 3, 0, -393243, 3, 0, -393242, 3, 0, -393241, 3, 0, -393240, 3, 0, -393239, 3, 0, -393238, 0, 0, -393237, 3, 0, -393236, 1, 0, -393235, 1, 0, -393234, 3, 0, -393233, 3, 0, -393232, 3, 0, -393231, 536870912, 0, -327711, 3, 0, -327710, 3, 0, -327709, 3, 0, -327708, 3, 0, -327707, 3, 0, -327706, 3, 0, -327705, 3, 0, -327704, 3, 0, -327703, 2, 0, -327702, 3, 0, -327701, 3, 0, -327700, 1, 0, -327699, 1, 0, -327698, 0, 0, -327697, 3, 0, -327696, 3, 0, -262174, 3, 0, -262173, 3, 0, -262172, 3, 0, -262171, 3, 0, -262170, 0, 0, -262169, 3, 0, -262168, 3, 0, -262167, 2, 0, -262166, 1, 0, -262165, 1, 0, -262164, 3, 0, -262163, 2, 0, -262162, 2, 0, -262161, 3, 0, -196637, 3, 0, -196636, 3, 0, -196635, 3, 0, -196634, 2, 0, -196633, 1, 0, -196632, 1, 0, -196631, 3, 0, -196630, 3, 0, -196629, 0, 0, -196628, 3, 0, -196627, 2, 0, -196626, 0, 0, -131100, 3, 0, -131099, 1, 0, -131098, 0, 0, -131097, 1, 0, -131096, 3, 0, -131095, 3, 0, -131094, 1, 0, -131093, 0, 0, -131092, 0, 0, -131091, 2, 0, -65563, 3, 0, -65562, 1, 0, -65561, 0, 0, -65560, 2, 0, -65559, 3, 0, -65558, 0, 0, -65557, 2, 0, -65556, 2, 0, -26, 1, 0, -25, 1, 0, -24, 3, 0, -23, 0, 0, -22, 2, 0, -21, 1, 0, 65511, 1, 0, 65512, 3, 0, 65513, 3, 0, 65514, 3, 0 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( -1096, -1932.63 )

[node name="StaticBody2D" parent="YSort" instance=ExtResource( 4 )]
visible = false
position = Vector2( -1291.12, -2131.36 )

[node name="StaticBody2D2" parent="YSort" instance=ExtResource( 4 )]
visible = false
position = Vector2( -1201.67, -1795.51 )

[node name="StaticBody2D3" parent="YSort" instance=ExtResource( 4 )]
visible = false
position = Vector2( -1513.83, -2038.35 )

[node name="StaticBody2D4" parent="YSort" instance=ExtResource( 4 )]
visible = false
position = Vector2( -1759.75, -1854.28 )

[node name="StaticBody2D5" parent="YSort" instance=ExtResource( 4 )]
visible = false
position = Vector2( -2075.4, -1837.31 )

[node name="StaticBody2D6" parent="YSort" instance=ExtResource( 4 )]
visible = false
position = Vector2( -2394.99, -1935.76 )

[node name="blip" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( -2472.25, -2058.25 )

[node name="StaticBody2D7" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( -1286.16, -2163.76 )
scale = Vector2( 0.8, 0.8 )
z_index = 1

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.101961, 0.101961, 0.101961, 1 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
visible = false
navpoly = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Nowa animacja" = SubResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -2183.09
margin_top = -2150.6
margin_right = -1763.09
margin_bottom = -2103.6
custom_fonts/font = ExtResource( 8 )
text = "Prawy przycisk myszy aby uderzyć"
__meta__ = {
"_edit_use_anchors_": false
}
